--- a/styles/assignment_style.css
+++ b/styles/assignment_style.css
@@ -4,9 +4,14 @@
     margin: 0 auto;
 } */
 
+body{
+    background-color: #F1F1F3;
+}
+
 main{
     max-width:1280px ;
     margin: 0 auto;
+    
 }
 /* Banner STYLES */
 
@@ -123,4 +128,57 @@ font-weight: bolder;
  color: white;
  border-radius: 8px;
  border-style: none;
+}
+
+/* RECENT NEWS styles */
+
+.news_title{
+    font-size: 40px;
+    font-weight: bold;
+}
+
+.btn_color{
+    background-color: #006A50;
+    text-align: center;
+}
+
+.braking_news_content1{
+    display: flex;
+}
+
+.braking_news_content2{
+    display: flex;
+}
+
+.braking_news_content1 , .braking_news_content2{
+    background-color:white ;
+    margin-bottom: 24px;
+    gap:40px ;
+    border-radius: 24px;
+    width: 1280px;
+    height:400px ;
+    align-items: center;
+    padding-left:48px ;
+    /* border-color:whitesmoke ; */
+}
+
+.braking_news_content1>img{
+    border-radius: 24px;
+}
+.braking_news_content2{
+    padding-right: 24px;
+}
+.braking_news_content2>img{
+    border-radius: 24px;
+}
+
+.braking_news_title{
+    font-size: 32px;
+    font-weight: bold;
+    margin-bottom: 12px;
+}
+.braking_news_discri{
+    font-size: 16px;
+    font-weight: 400;
+    color: #0E0E0E;
 }
