--- a/styles/assignment_style.css
+++ b/styles/assignment_style.css
@@ -62,13 +62,19 @@ main{
 
 /* VISION_FUTURE STYLES */
 
+.vision{
+    margin-top: 80px;
+}
+
 .vision_title{
 font-size: 45px;
 font-weight: bolder;
+margin-bottom: 24px;
 }
 .vision_descri{
     font-size: 16px;
     font-weight: 400;
+    /* margin-top: 24px; */
 }
 
 .future_content{
@@ -132,6 +138,9 @@ font-weight: bolder;
 
 /* RECENT NEWS styles */
 
+.news{
+    margin-top: 80px;
+}
 .news_title{
     font-size: 40px;
     font-weight: bold;
@@ -181,4 +190,50 @@ font-weight: bolder;
     font-size: 16px;
     font-weight: 400;
     color: #0E0E0E;
+}
+
+/* Donate today styles */
+
+.donate_content{
+text-align: center;
+}
+
+.taka_content{
+    display: flex;
+    gap: 24px;
+}
+
+.taka_box{
+    width: 240px;
+    background-color:#FFFFFF;
+    padding: 50px;
+    border-radius:16px ;
+}
+.taka_amt{
+    text-align: center;
+    font-size: 40px;
+    font-weight: bold;
+}
+.one_box_color{
+    background-color: #C6E4D6; 
+}
+
+.donate_input{
+    margin-top:32px ;
+    border-style: none;
+    /* text-align: center; */
+}
+
+input{
+    width: 100%;
+    height:64px ;
+    /* outline:none ; */
+    text-align: center;
+}
+
+.justify{
+    /* align-items: center; */
+    /* justify-content: center; */
+    padding: 32px 564px 0px 564px;
+    
 }
