--- a/styles/assignment_style.css
+++ b/styles/assignment_style.css
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+.fira-sans-medium {
+    font-family: "Fira Sans", serif;
+    font-weight: 500;
+    font-style: normal;
+  }
 
 /* .vision{
     margin: 0 auto;
@@ -146,6 +150,10 @@ margin-bottom: 24px;
     font-weight: bold;
 }
 
+.news_discri{
+    color: #0E0E0E;
+}
+
 .btn_color{
     background-color: #006A50;
     text-align: center;
@@ -194,6 +202,10 @@ margin-bottom: 24px;
 
 /* Donate today styles */
 
+.donate{
+    margin-top: 80px;
+}
+
 .donate_content{
 text-align: center;
 }
@@ -235,5 +247,9 @@ input{
     /* align-items: center; */
     /* justify-content: center; */
     padding: 32px 564px 0px 564px;
-    
+}
+
+/* HOVER & COLOR CHANGE Styles */
+.taka_box:hover ,.btn_primary:hover, .btn_explore:hover {
+background-color: #5490F5;
 }
