--- a/styles/assignment_style.css
+++ b/styles/assignment_style.css
@@ -249,7 +249,44 @@ input{
     padding: 32px 564px 0px 564px;
 }
 
+
 /* HOVER & COLOR CHANGE Styles */
 .taka_box:hover ,.btn_primary:hover, .btn_explore:hover {
 background-color: #5490F5;
+}
+
+
+/* SUBSCRIBER Styles */
+footer{
+    max-width:1280px ;
+    margin: 0 auto;
+    background-color: #C6E4D6;
+   border-radius: 24px;
+   margin-top: 80px;
+}
+
+.Subsci{
+    padding: 80px 265px;
+}
+/* .subsci_title{
+    font-size: 40px;
+    font-weight: 900;
+} */
+
+.subsci_discri{
+font-size: 16px;
+font-weight: 400;
+}
+
+.subsci_content{
+    text-align: center;
+}
+
+.email_subsc{
+    display: flex;
+}
+
+.Subsci>.subsci_content>.subsci_discri{
+    margin-top:16px ;
+    margin-bottom: 24px;
 }
