--- a/styles/assignment_style.css
+++ b/styles/assignment_style.css
@@ -140,6 +140,18 @@ margin-bottom: 24px;
  border-style: none;
 }
 
+.yunus{
+    background-image: url("../assets/quote-bg.png") ;
+    background-repeat: no-repeat;
+    background-color: white;
+    width: 1280px;
+    height:240px ;
+    padding: 8px;
+    border-radius:10px ;
+    margin-top:32px ;
+    ;
+}
+
 /* RECENT NEWS styles */
 
 .news{
